--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "6.28.0",
     "react-scripts": "5.0.1",
     "react-time-ago": "^7.3.3",
